--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
     <div class="container">
         <h3>Media Artist from SCL</h3>
         <img src="00000000000000.PNG" alt="Text Based CV Project">
-         <p>I am an enthusiast about audio technologies and hardware projects for musicians. Former "Sound Design with Pure Data" assistant teacher at Sound Arts Diploma at Uchile</p>
-        <p>Currently working on Computer Vision and text-based projects. Yes I like drawing model cars for fun</p>
- 
+        <p>Currently working on Computer Vision and text-based projects.</p>
         <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com" id="email">sakayama666@icloud.com</a></p>
         
+        <p>I was a teaching assistant in Pure Data software in the Sound Art Diploma at the University of Chile. My work has focused on exploring concrete music, inspired by the ideas in the Futurist Manifesto. These philosophies and techniques allow me to push the boundaries of sound art and technology, blending performance, composition, and digital media into new expressions.</p>
+
+        <p>I also teach technologies in web, mobile, and media design tools for art, architecture, and design professionals, including 3D technologies, code applied to design modeling, service design, and job interview preparations for tech roles.</p>
     </div>
 
     <div class="toggles">
@@ -156,6 +157,7 @@
     </script>
 </body>
 </html>
+
 
 
 
