--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             text-align: left;
         }
         .toggles {
-            position: fixed;
+            position: center-left;
             top: 50%;
             left: 10px;
             transform: translateY(-50%);
