--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         I was a teaching assistant in Pure Data software in Sound Art Diploma 
         at U. de Chile, where I explored concrete music and the futurist 
         manifesto. I'm also a writer for magazines such as Nación Eléctrica, and
-        you can find me in the alternative music world at <a href="https://labalahumana.bandcamp.com/" target="_blank">Labalahumana Bandcamp</a>.</p>
+        you can find me in the alternative music world at <a href="https://labalahumana.bandcamp.com/" target="_blank"> my bandcamp site</a>.</p>
         <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com" id="email">sakayama666@icloud.com</a></p>
     </div>
 
